--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
             </div>
         <!--/Alert-->
         <!--Navbar-->
-        <div class="container-fluid">
+        <div class="container-fluid nav-bg">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+                <a href="/" class="navbar-brand">
+                <img src="assets/images/themonkeeslogo.jpg" alt="The Monkees">
+                </a>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle Navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -39,8 +42,8 @@
         </div>
         <!--/Navbar-->
         <!--Navbar Collapse-->
-        <div class="navbar-collapse collapse container-wrapper-almost-black" id="navbar">
-            <ul class="nav navbar-nav">
+        <div class="navbar-collapse collapse" id="navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
                 <li><a href="/">Home</a></li>
                 <li><a href="/">Music</a></li> 
                 <li><a href="/">Hey Hey!</a></li>
