--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!--Navbar-->
         <div class="container-fluid nav-bg">
             <div class="navbar-header">
-                <a href="/" class="navbar-brand">
+                <a href="/" class="navbar-brand" href="index.html">
                 <img src="assets/images/themonkeeslogo.jpg" alt="The Monkees">
                 </a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
