--- a/heyhey.html
+++ b/heyhey.html
@@ -35,10 +35,10 @@
         <!--Navbar Collapse-->
             <div class="navbar-collapse collapse" id="navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/">Music</a></li> 
-                    <li><a href="/">Hey Hey!</a></li>
-                    <li><a href="/">Events & Tickets</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="music.html">Music</a></li> 
+                    <li><a href="heyhey.html">Hey Hey!</a></li>
+                    <li><a href="eventsandtickets.html">Events & Tickets</a></li>
                 </ul>
             </div>
         </nav>
