--- a/index.html
+++ b/index.html
@@ -79,25 +79,33 @@
                             <div class="col-xs-12 col-md-6">
                                 <div class="News .glyphicon news">
                                     <h3><span class="glyphicon glyphicon-headphones hidden-xs"></span> Listen Up! <span class="label label-warning">New!</span></h3>
-                        <p> 
-                            To celebrate the band's 50th anniversary, they released a record called <a href="music.html">Good Times</a>.
-                            It's their first new album in 20 years and the first since the passing of former band heartthrob Davy Jones in 2012.
-                        </p>
+                                        <p> 
+                                            To celebrate the band's 50th anniversary, they released a record called <a href="music.html">Good Times</a>.
+                                            It's their first new album in 20 years and the first since the passing of former band heartthrob Davy Jones in 2012.
+                                        </p>
                                 </div>
-                        <p>
-                            2019 US Tour dates released (1st March - 15 March)
-                        </p>
-                        <p>
-                            2019 New Zealand Tour dates released (8th June - 10th June) 
-                        </p>
-                        <p>
-                            2019 Australia Tour date released (15th June)
-                        </p>
+                                <div class="News .glyphicon news">
+                                    <h3><span class="glyphicon glyphicon-pencil hidden-xs"></span> Here! <span class="label label-warning">New!</span></h3>
+                                        <p>
+                                            2019 US Tour dates released (1st March - 15 March)
+                                        </p>
+                                </div>
+                                <div class="News .glyphicon news">
+                                    <h3><span class="glyphicon glyphicon-pencil hidden-xs"></span> We! <span class="label label-warning">New!</span></h3>
+                                        <p>
+                                            2019 New Zealand Tour dates released (8th June - 10th June) 
+                                        </p>
+                                </div>
+                                <div class="News .glyphicon news">
+                                    <h3><span class="glyphicon glyphicon-pencil hidden-xs"></span> Come! <span class="label label-warning">New!</span></h3>
+                                        <p>
+                                            2019 Australia Tour date released (15th June)
+                                        </p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
             <!--End Hot News-->
             
             <!--Upcoming Tour Dates-->
@@ -132,7 +140,7 @@
                             <td>Mar 1st</td>
                             <td>Medford, MA (US)</td>
                             <td>Chevalier Theatre</td>
-                            <td><a class="btn btn-sm btn-link btn-link:hover" href="eventsandtickets.html">Buy</a></td>
+                            <td><a class="btn btn-sm btn-link" href="eventsandtickets.html">Buy</a></td>
                         </tr>
                         <tr>
                             <td>Mar 2nd</td>
@@ -220,6 +228,7 @@
                         </tr>
                     </tbody>
                 </table>
+            </div>
             </div>
         </section>
         
