--- a/eventsandtickets.html
+++ b/eventsandtickets.html
@@ -53,7 +53,7 @@
                 </div>
             <!--End Another great group performing image-->
             <!--Tickets-->
-            <div class="container-fluid upcoming-tour-dates-container bg-color-red">
+            <div class="container-fluid headline-container bg-color-red">
                 <div class="row">
                     <strong>Tickets</strong>
                 </div>
