--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <!--End Group performing image-->
             
             <!--Hot News-->
-            <div class="container-fluid hot-news-headline-container bg-color-red">
+            <div class="container-fluid headline-container bg-color-red">
                 <div class="row">
                     <strong>Hot News!</strong>
                 </div>
@@ -109,7 +109,7 @@
             <!--End Hot News-->
             
             <!--Upcoming Tour Dates-->
-            <div class="container-fluid upcoming-tour-dates-container bg-color-red">
+            <div class="container-fluid headline-container bg-color-red">
                 <div class="row">
                     <strong>Upcoming Tour Dates</strong>
                 </div>
