--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         
         <section class="News">
             <!--Group performing image-->
-            <div class="container group-image">
+            <div class="container hot-news-image">
                 <div class="opaque-overlay">&nbsp;</div>
                     <div class="col-xs-12"></div>
                 </div>
@@ -244,9 +244,10 @@
                         <li><a href="https://open.spotify.com/artist/320EPCSEezHt1rtbfwH6Ck/" target="_blank"><i class="fa icon-footer fa-spotify"></i></a></li>
                     </ul>
                 </div>
+                <div class="block-divider--footer"></div>
             </div>
             <!--/social Media-->
-
+            
             <!-- Footer Lower Container -->
             <div class="container-fluid bg-color-lower-footer lower-footer-style">
                 <div class="row">
