--- a/music.html
+++ b/music.html
@@ -57,6 +57,7 @@
                 <div class="col-xs-12 video-image">
                     <iframe width="800" height="550"
                         src="https://www.youtube.com/embed/T5Q_FbVf0Cs?controls=0">
+                        <p>Your browser does not support iframes.</p>
                     </iframe> 
                         <source src="movie.ogg" type="video/ogg">
                 </div>
@@ -164,7 +165,7 @@
                         </div>
                         
                         <div class="disco-item" dates="1967">
-                            <h4>Pisces, Aquarius, Capricorn & Jones</h4>
+                            <h4>Pisces, Aquarius, Capricorn & Jones Ltd</h4>
                             <p>Arista</p>
                             <br>
                         </div>
@@ -383,6 +384,7 @@
                         <li><a href="https://open.spotify.com/artist/320EPCSEezHt1rtbfwH6Ck/" target="_blank"><i class="fa icon-footer fa-spotify"></i></a></li>
                     </ul>
                 </div>
+                <div class="block-divider--footer"></div>
             </div>
             <!--/social Media-->
 
