--- a/eventsandtickets.html
+++ b/eventsandtickets.html
@@ -186,6 +186,7 @@
                         <li><a href="https://open.spotify.com/artist/320EPCSEezHt1rtbfwH6Ck/" target="_blank"><i class="fa icon-footer fa-spotify"></i></a></li>
                     </ul>
                 </div>
+                <div class="block-divider--footer"></div>
             </div>
             <!--/social Media-->
 
