--- a/heyhey.html
+++ b/heyhey.html
@@ -60,9 +60,9 @@
                 </div>
             </div>
             
-            <div class="container-fluid bg-color-yellow">
+            <div class="container-fluid back-story-container bg-color-yellow">
                 <div class="row">
-                    <div class="col-xs-12">
+                    <div class="col-xs-12 col-md-6 back-story-writeup">
                        <p>The Monkees are an American rock and pop band originally active between 1966 and 1971, with reunion albums and tours in the decades that followed.
                        They were formed in Los Angeles in 1965 by Bob Rafelson and Bert Schneider specifically for the American television series The Monkees, which aired 
                        from 1966 to 1968. The musical acting quartet was composed of Americans Micky Dolenz, Michael Nesmith, and Peter Tork; and the English actor and 
