--- a/music.html
+++ b/music.html
@@ -54,7 +54,7 @@
         <div class="container-fluid main-video-container bg-color-yellow">
         <div class="video-bg bg-color-yellow">
             <div class="row">
-                <div class="col-xs-12 col-md-6 video-image">
+                <div class="col-xs-12 video-image">
                     <iframe width="800" height="550"
                         src="https://www.youtube.com/embed/T5Q_FbVf0Cs?controls=0">
                         <p>Your browser does not support iframes.</p>
