--- a/eventsandtickets.html
+++ b/eventsandtickets.html
@@ -174,12 +174,15 @@
             </div>
             <!--/Book Tickets-->
             <!--Booking The Monkees-->
-            <div class="container-fluid headline-container bg-color-red">
+            <div class="container-fluid headline-container bg-color-purple">
                 <div class="row">
                     <strong>Booking The Monkees</strong>
                 </div>
             </div>
-            <div class="container-fluid booking-container bg-color-yellow">
+             <div class="container celebration-image">
+                    <div class="col-xs-12"></div>
+                </div>
+            <div class="container-fluid booking-container bg-color-lilac">
                 <div class="row">
                     <div class="col-xs-12 booking-writeup">
                        <p>Hey Hey for your special moment, check to see if The Monkees are available to perform
