--- a/index.html
+++ b/index.html
@@ -76,32 +76,33 @@
                 <div class="row">
                     <div class="col-xs-12 fifty-years-news">
                         <div class="row">
-                            <div class="col-xs-12 col-md-6">
-                                <div class="News .glyphicon news">
-                                    <h3><span class="glyphicon glyphicon-headphones hidden-xs"></span> Listen Up! <span class="label label-warning">New!</span></h3>
-                                        <p> 
-                                            To celebrate the band's 50th anniversary, they released a record called <a href="music.html">Good Times</a>.
-                                            It's their first new album in 20 years and the first since the passing of former band heartthrob Davy Jones in 2012.
-                                        </p>
-                                </div>
-                                <div class="News .glyphicon news">
-                                    <h3><span class="glyphicon glyphicon-pencil hidden-xs"></span> Here! <span class="label label-warning">New!</span></h3>
-                                        <p>
-                                            2019 US Tour dates released (1st March - 15 March)
-                                        </p>
-                                </div>
-                                <div class="News .glyphicon news">
-                                    <h3><span class="glyphicon glyphicon-pencil hidden-xs"></span> We! <span class="label label-warning">New!</span></h3>
-                                        <p>
-                                            2019 New Zealand Tour dates released (8th June - 10th June) 
-                                        </p>
-                                </div>
-                                <div class="News .glyphicon news">
-                                    <h3><span class="glyphicon glyphicon-pencil hidden-xs"></span> Come! <span class="label label-warning">New!</span></h3>
-                                        <p>
-                                            2019 Australia Tour date released (15th June)
-                                        </p>
-                                </div>
+                            <div class="News .glyphicon news">
+                                <h3><span class="glyphicon glyphicon-headphones hidden-xs"></span> Listen Up! <span class="label label-warning">New!</span></h3>
+                                    <p> 
+                                        To celebrate the band's 50th anniversary, they released a record called <a href="music.html">Good Times</a>.
+                                        It's their first new album in 20 years and the first since the passing of former band heartthrob Davy Jones in 2012.
+                                    </p>
+                            </div>
+                            <div class="row">
+                            <strong>Tour Dates:</strong>
+                            </div>
+                            <div class="News .glyphicon news">
+                                <h3><span class="glyphicon glyphicon-pencil hidden-xs"></span><span class="label label-warning">Here!</span></h3>
+                                    <p>
+                                        2019 US Tour dates released (1st March - 15 March)
+                                    </p>
+                            </div>
+                            <div class="News .glyphicon news">
+                                <h3><span class="glyphicon glyphicon-pencil hidden-xs"></span><span class="label label-warning">We!</span></h3>
+                                    <p>
+                                        2019 New Zealand Tour dates released (8th June - 10th June) 
+                                    </p>
+                            </div>
+                            <div class="News .glyphicon news">
+                                <h3><span class="glyphicon glyphicon-pencil hidden-xs"></span><span class="label label-warning">Come!</span></h3>
+                                    <p>
+                                        2019 Australia Tour date released (15th June)
+                                    </p>
                             </div>
                         </div>
                     </div>
