--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                     </p>
                             </div>
                             <div class="row">
-                            <strong>Tour Dates:</strong>
+                            <strong>New Tour Dates:</strong>
                             </div>
                             <div class="News .glyphicon news">
                                 <h3><span class="glyphicon glyphicon-pencil hidden-xs"></span><span class="label label-warning">Here!</span></h3>
