--- a/music.html
+++ b/music.html
@@ -128,7 +128,7 @@
                 <strong>Discography</strong>
             </div>
         </div>
-        <section class="container-fluid bg-color-yellow">
+        <section class="container-fluid disco-container bg-color-yellow">
             <div class="row row-table">
                 <div class="col-12-xs col-sm-6 col-md-6 col-lg-3 bg-color-yellow timeline-container section-column">
                     <div class="row">
