--- a/eventsandtickets.html
+++ b/eventsandtickets.html
@@ -46,15 +46,13 @@
         </header>
         
         <section class="News">
-            <!--Another great group performing image-->
             <div class="container-fluid headline-container bg-color-red">
                 <div class="row">
                     <strong>Lets celebrate 50 years of The Monkees!</strong>
                 </div>
             </div>
-            <div class="container eventsandtickets-image">
-                    <div class="col-xs-12"></div>
-                </div>
+            <!--Another great group performing image-->
+            <div class="container-fluid eventsandtickets-image"></div>
             <!--End Another great group performing image-->
             <!--Book Tickets-->
             <div class="container-fluid headline-container bg-color-red">
@@ -179,13 +177,11 @@
                     <strong>Booking The Monkees</strong>
                 </div>
             </div>
-             <div class="container celebration-image">
-                    <div class="col-xs-12"></div>
-                </div>
+            <div class="container-fluid celebration-image"></div>
             <div class="container-fluid booking-container bg-color-lilac">
                 <div class="row">
                     <div class="col-xs-12 booking-writeup">
-                       <p>Hey Hey for your special moment, check to see if The Monkees are available to perform
+                       <p>Hey Hey! for your special moment, check to see if The Monkees are available to perform
                        for you, your family & friends. Simply add your details
                        and we'll take you one step closer to the magic! </p>
                        <button class="btn btn-sm btn-cta btn-green" data-toggle='modal' data-target='#BookMonkeesModal'>Booking Enquiry</button>
