--- a/heyhey.html
+++ b/heyhey.html
@@ -47,9 +47,7 @@
         
         <section class="Hey Hey">
             <!--Another group performing image-->
-            <div class="container heyhey-image">
-                    <div class="col-xs-12"></div>
-                </div>
+            <div class="container-fluid heyhey-image"></div>
             <!--/Another group performing image-->
             
             <!--Background Story-->
