--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
         <!--Alert-->
         <div class="container-fluid alert-container hidden-xs">
            <div class="row">
-                <div class="col-xs-12">
-                    <div class="site-wide-alert alert alert-warning">
-                        <strong>Concert Booking & Tickets Sale!</strong><a href="eventsandtickets.html"> Click here to view availability</a>
-                    </div>
+                <div class="col-xs-12 site-wide-alert alert alert-warning">
+                    <strong>Concert Booking & Tickets Sale!</strong><a href="eventsandtickets.html"> Click here to view availability</a>
                 </div>
             </div>
         </div>
@@ -59,9 +57,8 @@
         
         <section class="News">
             <!--Group performing image-->
-            <div class="container hot-news-image">
+            <div class="container-fluid hot-news-image">
                 <div class="opaque-overlay">&nbsp;</div>
-                    <div class="col-xs-12"></div>
                 </div>
             <!--End Group performing image-->
             
@@ -137,7 +134,7 @@
                             <td>Mar 1st</td>
                             <td>Medford, MA (US)</td>
                             <td>Chevalier Theatre</td>
-                            <td><a class="btn btn-sm btn-link" href="eventsandtickets.html">Check</a></td>
+                            <td><a class="btn btn-sm btn-link btn-link:hover" href="eventsandtickets.html">Check</a></td>
                         </tr>
                         <tr>
                             <td>Mar 2nd</td>
