--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     </div>
             <table class="table">
                     <thead>
-                        <tr class="check-tickets">
+                        <tr class="check-tickets text-center">
                             <th>Date</th>
                             <th>Location</th>
                             <th>Venue</th>
