--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <div class="container-fluid alert-container hidden-xs">
            <div class="row">
                 <div class="col-xs-12 site-wide-alert alert alert-warning">
-                    <strong>Concert Booking & Tickets Sale!</strong><a href="eventsandtickets.html"> Click here to view availability</a>
+                    <strong>Concert Booking & Tickets Sale!</strong><a href="eventsandtickets.html"> Click</a><strong>to view availability..</strong>
                 </div>
-            </div>
+            </div> 
         </div>
         <!--/Alert-->
         
@@ -74,14 +74,15 @@
                     <div class="col-xs-12 fifty-years-news">
                         <div class="row">
                             <div class="News .glyphicon news">
-                                <h3><span class="glyphicon glyphicon-headphones hidden-xs"></span> Listen Up! <span class="label label-warning">New!</span></h3>
+                                <h3><span class="glyphicon glyphicon-headphones hidden-xs"></span> Listen Up! </h3>
                                     <p> 
                                         To celebrate the band's 50th anniversary, they released a record called <a href="music.html">Good Times</a>.
                                         It's their first new album in 20 years and the first since the passing of former band heartthrob Davy Jones in 2012.
                                     </p>
                             </div>
                             <div class="row">
-                            <strong>New Tour Dates:</strong>
+                            <h3><span class="label label-danger"><strong>New Tour Dates:</strong></span></h3>
+                            
                             </div>
                             <div class="News .glyphicon news">
                                 <h3><span class="glyphicon glyphicon-pencil hidden-xs"></span><span class="label label-warning">Here!</span></h3>
