--- a/eventsandtickets.html
+++ b/eventsandtickets.html
@@ -216,24 +216,23 @@
             <!-- /Footer Lower Container -->
         </footer>
         <!--Book Ticket Modal-->
-        <div class="modal fade" id="TicketModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal fade" id="TicketModal" tabindex="-1" role="dialog" aria-labelledby="myTicketModal">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Ticket Order</h4>
+                <h4 class="modal-title" id="myTicketModal">Ticket Order</h4>
               </div>
           <div class="modal-body">
-            <form data-toggle="validator" role="form">
+            <form>
           <div class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-            <input type="email" name="email" class="form-control" id="email" placeholder="Email*" required>
+            <input id="email" type="text" class="form-control" placeholder="Email*" required>
           </div>
           <div class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
             <input type="password" name="password" class="form-control" id="password" placeholder="Password*" required>
           </div>
-          <div class="help-block">*Password requires minimum of 6 characters</div>
           <div class="checkbox">
             <label><input type="checkbox"> Tick box to agree for email to be shared with registered third parties</label>
           </div>
@@ -250,27 +249,28 @@
         </div>
         <!--/Book Ticket Modal-->
         <!--Book The Monkees Modal-->
-        <div class="modal fade" id="BookMonkeesModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal fade" id="BookMonkeesModal" tabindex="-1" role="dialog" aria-labelledby="myBookMonkeesModal">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Booking Order Form</h4>
+                <h4 class="modal-title" id="myBookMonkeesModal">Booking Order Form</h4>
               </div>
           <div class="modal-body">
             <form>
           <div class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-            <input id="full name" type="text" class="form-control" name="full name" placeholder="Full Name*" required>
+            <input id="name" type="text" class="form-control" name="name" placeholder="Name*" required>
           </div>
           <div class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-            <input type="email" name="email" class="form-control" id="email" placeholder="Email*" required>
+            <input id="email" type="text" class="form-control" placeholder="Email*" required>
           </div>
           <div class="input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-            <input id="date" type="date" class="form-control" name="date" placeholder="Preferred Date*" required>
+            <input id="date" type="date" class="form-control" name="date" required>
           </div>
+          <label>*Enter preferred booking date</label>
           <div class="input-group">
             <div class="radio">
               <label><input type="radio" name="optradio" checked>Wedding</label>
