--- a/music.html
+++ b/music.html
@@ -73,7 +73,7 @@
                 <strong>Sample Music</strong>
             </div>
         </div>
-        <div class="music container bg-color-green">
+        <div class="container-fluid col-xs-12 music container bg-color-green">
             <div class="row">
                 <!-- Track 1 -->
                 <div class="col-12-xs col-sm-6 col-md-6 col-lg-3 text-center music-background">
