--- a/index.html
+++ b/index.html
@@ -72,37 +72,34 @@
             <div class="container-fluid fifty-years-container bg-color-yellow">
                 <div class="row">
                     <div class="col-xs-12 fifty-years-news">
-                        <div class="row">
+                        <div class="row text-center">
                             <div class="Listen-up News .glyphicon news bg-color-yellow-dark">
-                                <h3><span class="glyphicon glyphicon-headphones hidden-xs"></span> Listen Up! </h3>
+                                <h2><span class="glyphicon glyphicon-headphones hidden-xs"></span> Listen Up! </h2>
+                                <div class="block-divider--hot-news"></div>
                                     <p> 
                                         To celebrate the band's 50th anniversary, they released a record called <a href="music.html">Good Times</a>.
                                         It's their first new album in 20 years and the first since the passing of former band heartthrob Davy Jones in 2012.
                                     </p>
                             </div>
                             <div class="New-Tour-Dates bg-color-yellow-dark">
-                            <div class="row">
-                            <h2><span class="label label-danger"><strong>New Tour Dates:</strong></span></h2>
-                            
+                            <div class="row text-center">
+                            <h2>New Tour Dates for 2019</h2>
                             </div>
+                            <div class="block-divider--hot-news"></div>
                             <div class="News .glyphicon news">
-                                <h3><span class="glyphicon glyphicon-pencil hidden-xs"></span><span class="label label-warning">Here!</span></h3>
-                                    <p>
-                                        2019 US Tour dates released (1st March - 15 March)
-                                    </p>
+                                <h4><span class="glyphicon glyphicon-pencil hidden-xs"></span>US Tour</h4>
                             </div>
+                            <p>(1 Mar - 15 Mar)</p>
+                            <div class="block-divider--hot-news"></div>
                             <div class="News .glyphicon news">
-                                <h3><span class="glyphicon glyphicon-pencil hidden-xs"></span><span class="label label-warning">We!</span></h3>
-                                    <p>
-                                        2019 New Zealand Tour dates released (8th June - 10th June) 
-                                    </p>
+                                <h4><span class="glyphicon glyphicon-pencil hidden-xs"></span>New Zealand Tour</h4>
                             </div>
+                            <p>(8 Jun - 10 Jun)</p>
+                            <div class="block-divider--hot-news"></div>
                             <div class="News .glyphicon news">
-                                <h3><span class="glyphicon glyphicon-pencil hidden-xs"></span><span class="label label-warning">Come!</span></h3>
-                                    <p>
-                                        2019 Australia Tour date released (15th June)
-                                    </p>
+                                <h4><span class="glyphicon glyphicon-pencil hidden-xs"></span>Australia Tour</h4>
                             </div>
+                            <p>(15 Jun)</p>
                             </div>
                         </div>
                     </div>
