--- a/heyhey.html
+++ b/heyhey.html
@@ -47,7 +47,7 @@
         <!--/Navbar collapse-->
     </header>
 
-    <section class="Hey Hey">
+    <section class="Hey-Hey bg-color-yellow">
         <!--Another group performing image-->
         <div class="container-fluid heyhey-image"></div>
         <!--/Another group performing image-->
@@ -82,7 +82,7 @@
             </div>
         </div>
         <!-- Slideshow container -->
-        <div class="slideshow-container">
+        <div class="slideshow-container bg-color-yellow">
 
             <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
