--- a/music.html
+++ b/music.html
@@ -74,7 +74,7 @@
             <strong>Sample Music</strong>
         </div>
     </div>
-    <div class="container-fluid col-xs-12 music container bg-color-green">
+    <div class="container-fluid col-xs-12 music container bg-color-yellow">
         <div class="row">
             <!-- Track 1 -->
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 text-center music-background">
@@ -131,7 +131,7 @@
     </div>
     <section class="container-fluid disco-container bg-color-yellow">
         <div class="row row-table">
-            <div class="col-12-xs col-sm-6 col-md-6 col-lg-3 bg-color-yellow timeline-container section-column">
+            <div class="col-12-xs col-sm-6 col-md-6 col-lg-6 bg-color-yellow timeline-container section-column">
                 <div class="row">
                     <div class="col-12-xs text-center">
                         <h3 class="disco-heading">Timeline</h3>
@@ -244,7 +244,7 @@
             </div>
             <!-- Albums & Songs -->
             <div class="container-fluid">
-                <div class="col-12-xs col-sm-6 col-md-6 col-lg-3 bg-color-yellow album-container section-column">
+                <div class="col-12-xs col-sm-6 col-md-6 col-lg-6 bg-color-yellow album-container section-column">
                     <div class="row">
                         <div class="col-12-xs text-center">
                             <h3 class="disco-heading">Albums</h3>
