--- a/heyhey.html
+++ b/heyhey.html
@@ -162,6 +162,7 @@
                 </div>
             </div>
         </div>
+        <!--/Slideshow container-->
         <!--The dots/circles-->
         <div class="container-fluid dots-circles bg-color-green">
             <div style="text-align:center">
