--- a/music.html
+++ b/music.html
@@ -81,7 +81,7 @@
                 <!-- Track 1 -->
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 text-center music-background">
                     <div class="text-center audio-column">
-                        <img src="assets/myimages/The Monkees 1966.png" alt="Album cover 'The Monkees'" class="album-cover-image-music">
+                        <img src="assets/myimages/Last Train to Clarksville.jpg" alt="Album cover 'The Monkees'" class="album-cover-image-music">
                     </div>
                     <audio controls="" class="sound-control">
                          <source src="assets/audio/Clarksville.mp3" type="audio/mp3">
@@ -92,7 +92,7 @@
                 <!-- Track 2 -->
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 text-center music-background">
                     <div class="text-center audio-column">
-                        <img src="assets/myimages/Birds Bees & Monkees 1968.png" alt="Album cover 'Bird Bees & Monkees'" class="album-cover-image-music">
+                        <img src="assets/myimages/Daydream Believer.jpg" alt="Album cover 'Bird Bees & Monkees'" class="album-cover-image-music">
                     </div>
                     <audio controls="" class="sound-control">
                          <source src="assets/audio/DaydreamBeliever.mp3" type="audio/mp3">
@@ -103,7 +103,7 @@
                 <!-- Track 3 -->
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 text-center music-background">
                     <div class="text-center audio-column">
-                        <img src="assets/myimages/The Monkees 1966.png" alt="Album cover 'The Monkees" class="album-cover-image-music">
+                        <img src="assets/myimages/I'm a Believer.jpg" alt="Album cover 'The Monkees" class="album-cover-image-music">
                     </div>
                     <audio controls="" class="sound-control">
                          <source src="assets/audio/ImABeliever.mp3" type="audio/mp3">
@@ -114,7 +114,7 @@
                 <!-- Track 4 -->
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 text-center music-background">
                     <div class="text-center audio-column">
-                        <img src="assets/myimages/More of The Monkees 1967.png" alt="Album cover '(I-I-I-I-I'm Not Your) Steppin' Stone'" class="album-cover-image-music">
+                        <img src="assets/myimages/Stepping Stone.jpg" alt="Album cover '(I-I-I-I-I'm Not Your) Steppin' Stone'" class="album-cover-image-music">
                     </div>
                     <audio controls="" class="sound-control">
                          <source src="assets/audio/SteppingStone.mp3" type="audio/mp3">
@@ -209,7 +209,7 @@
 
             <div class="mySlides fade">
                 <div class="numbertext">10 / 15</div>
-                <img src="assets/myimages/Carousel-images/20th Anniversary Tour 1986.png" alt="20th Anniversary Tour 1986" style="width:100%">
+                <img src="assets/myimages/Carousel-images/20th Anniversary Tour 1986.jpg" alt="20th Anniversary Tour 1986" style="width:100%">
                 <div class="caption-container">
                     <p id="caption">1986 - 20th Anniversary Tour (Rhino)</p>
                 </div>
