--- a/music.html
+++ b/music.html
@@ -132,125 +132,125 @@
             </div>
         </div>
         <!-- Slideshow container -->
-        <div class="slideshow-container">
+        <div class="container-fluid slideshow-container">
 
             <!-- Full-width Album images, production year & producer -->
-            <div class="mySlides fade">
+            <div class="album-image mySlides fade">
                 <div class="numbertext">1 / 15</div>
-                <img src="assets/myimages/Carousel-images/The Monkees 1966.png" alt="The Monkees" style="width:100%">
-                <div class="caption-container">
+                <img src="assets/myimages/Carousel-images/The Monkees 1966.png" alt="The Monkees" style="width:50%">
+                <div class="caption-container-music">
                     <p id="caption">1966 - The Monkees (Rhino)</p>
                 </div>
             </div>
 
-            <div class="mySlides fade">
+            <div class="album-image mySlides fade">
                 <div class="numbertext">2 / 15</div>
-                <img src="assets/myimages/Carousel-images/More of The Monkees 1967.png" alt="More of The Monkees" style="width:100%">
-                <div class="caption-container">
+                <img src="assets/myimages/Carousel-images/More of The Monkees 1967.png" alt="More of The Monkees" style="width:50%">
+                <div class="caption-container-music">
                     <p id="caption">1967 - More of The Monkees (Rhino)</p>
                 </div>
             </div>
 
-            <div class="mySlides fade">
+            <div class="album-image mySlides fade">
                 <div class="numbertext">3 / 15</div>
-                <img src="assets/myimages/Carousel-images/Headquarters 1967.png" alt="Headquarters" style="width:100%">
-                <div class="caption-container">
+                <img src="assets/myimages/Carousel-images/Headquarters 1967.png" alt="Headquarters" style="width:50%">
+                <div class="caption-container-music">
                     <p id="caption">1967 - Headquarters (Rhino)</p>
                 </div>
             </div>
 
-            <div class="mySlides fade">
+            <div class="album-image mySlides fade">
                 <div class="numbertext">4 / 15</div>
-                <img src="assets/myimages/Carousel-images/PAC&J Ltd 1967.png" alt="Pisces Aquarius Capricorn & Jones Ltd" style="width:100%">
-                <div class="caption-container">
+                <img src="assets/myimages/Carousel-images/PAC&J Ltd 1967.png" alt="Pisces Aquarius Capricorn & Jones Ltd" style="width:50%">
+                <div class="caption-container-music">
                     <p id="caption">1967 - Pisces, Aquarius, Capricorn & Jones Ltd (Arista)</p>
                 </div>
             </div>
 
-            <div class="mySlides fade">
+            <div class="album-image mySlides fade">
                 <div class="numbertext">5 / 15</div>
-                <img src="assets/myimages/Carousel-images/Birds Bees & Monkees 1968.png" alt="Birds Bees & Monkees 1968" style="width:100%">
-                <div class="caption-container">
+                <img src="assets/myimages/Carousel-images/Birds Bees & Monkees 1968.png" alt="Birds Bees & Monkees 1968" style="width:50%">
+                <div class="caption-container-music">
                     <p id="caption">1968 - The Birds, The Bees & The Monkees (Rhino)</p>
                 </div>
             </div>
 
-            <div class="mySlides fade">
+            <div class="album-image mySlides fade">
                 <div class="numbertext">6 / 15</div>
-                <img src="assets/myimages/Carousel-images/Head 1968.jpg" alt="Head" style="width:100%">
-                <div class="caption-container">
+                <img src="assets/myimages/Carousel-images/Head 1968.jpg" alt="Head" style="width:50%">
+                <div class="caption-container-music">
                     <p id="caption">1968 - Head (Rhino)</p>
                 </div>
             </div>
 
-            <div class="mySlides fade">
+            <div class="album-image mySlides fade">
                 <div class="numbertext">7 / 15</div>
-                <img src="assets/myimages/Carousel-images/Instant Replay 1969.png" alt="Instant Replay 1969" style="width:100%">
-                <div class="caption-container">
+                <img src="assets/myimages/Carousel-images/Instant Replay 1969.png" alt="Instant Replay 1969" style="width:50%">
+                <div class="caption-container-music">
                     <p id="caption">1969 - Instant Replay (Rhino)</p>
                 </div>
             </div>
 
-            <div class="mySlides fade">
+            <div class="album-image mySlides fade">
                 <div class="numbertext">8 / 15</div>
-                <img src="assets/myimages/Carousel-images/The Monkees Present 1969.png" alt="The Monkees Present 1969" style="width:100%">
-                <div class="caption-container">
+                <img src="assets/myimages/Carousel-images/The Monkees Present 1969.png" alt="The Monkees Present 1969" style="width:50%">
+                <div class="caption-container-music">
                     <p id="caption">1969 - The Monkees Present (Rhino)</p>
                 </div>
             </div>
 
-            <div class="mySlides fade">
+            <div class="album-image mySlides fade">
                 <div class="numbertext">9 / 15</div>
-                <img src="assets/myimages/Carousel-images/Changes 1970.png" alt="Changes 1970" style="width:100%">
-                <div class="caption-container">
+                <img src="assets/myimages/Carousel-images/Changes 1970.png" alt="Changes 1970" style="width:50%">
+                <div class="caption-container-music">
                     <p id="caption">1970 - Changes (Rhino)</p>
                 </div>
             </div>
 
-            <div class="mySlides fade">
+            <div class="album-image mySlides fade">
                 <div class="numbertext">10 / 15</div>
-                <img src="assets/myimages/Carousel-images/20th Anniversary Tour 1986.jpg" alt="20th Anniversary Tour 1986" style="width:100%">
-                <div class="caption-container">
+                <img src="assets/myimages/Carousel-images/20th Anniversary Tour 1986.jpg" alt="20th Anniversary Tour 1986" style="width:50%">
+                <div class="caption-container-music">
                     <p id="caption">1986 - 20th Anniversary Tour (Rhino)</p>
                 </div>
             </div>
 
-            <div class="mySlides fade">
+            <div class="album-image mySlides fade">
                 <div class="numbertext">11 / 15</div>
-                <img src="assets/myimages/Carousel-images/Pool it 1987.png" alt="Pool it 1987" style="width:100%">
-                <div class="caption-container">
+                <img src="assets/myimages/Carousel-images/Pool it 1987.png" alt="Pool it 1987" style="width:50%">
+                <div class="caption-container-music">
                     <p id="caption">1987 - Pool it (Rhino)</p>
                 </div>
             </div>
 
-            <div class="mySlides fade">
+            <div class="album-image mySlides fade">
                 <div class="numbertext">12 / 15</div>
-                <img src="assets/myimages/Carousel-images/Concert in Japan 1996.jpg" alt="Concert in Japan 1996" style="width:100%">
-                <div class="caption-container">
+                <img src="assets/myimages/Carousel-images/Concert in Japan 1996.jpg" alt="Concert in Japan 1996" style="width:50%">
+                <div class="caption-container-music">
                     <p id="caption">1996 - Concert in Japan (Varese)</p>
                 </div>
             </div>
 
-            <div class="mySlides fade">
+            <div class="album-image mySlides fade">
                 <div class="numbertext">13 / 15</div>
-                <img src="assets/myimages/Carousel-images/Justus 1996.png" alt="Justus 1996" style="width:100%">
-                <div class="caption-container">
+                <img src="assets/myimages/Carousel-images/Justus 1996.png" alt="Justus 1996" style="width:50%">
+                <div class="caption-container-music">
                     <p id="caption">1996 - Justus (Rhino)</p>
                 </div>
             </div>
 
-            <div class="mySlides fade">
+            <div class="album-image mySlides fade">
                 <div class="numbertext">14 / 15</div>
-                <img src="assets/myimages/Carousel-images/Live Summer Tour 2002.jpg" alt="Live Summer Tour 2002" style="width:100%">
-                <div class="caption-container">
+                <img src="assets/myimages/Carousel-images/Live Summer Tour 2002.jpg" alt="Live Summer Tour 2002" style="width:50%">
+                <div class="caption-container-music">
                     <p id="caption">2002 - Live Summer Tour (WIN Media)</p>
                 </div>
             </div>
 
-            <div class="mySlides fade">
+            <div class="album-image mySlides fade">
                 <div class="numbertext">15 / 15</div>
-                <img src="assets/myimages/Carousel-images/Good Times 2016.jpg" alt="Good Times 2016" style="width:100%">
-                <div class="caption-container">
+                <img src="assets/myimages/Carousel-images/Good Times 2016.jpg" alt="Good Times 2016" style="width:50%">
+                <div class="caption-container-music">
                     <p id="caption">2016 - Good Times (Rhino / Warner Bros)</p>
                 </div>
             </div>
