--- a/heyhey.html
+++ b/heyhey.html
@@ -93,7 +93,7 @@
             <div class="mySlides fade">
                 <div class="numbertext">2 / 9</div>
                 <img src="assets/myimages/Carousel-images/dj.jpg" alt="Davy Jones" style="width:100%">
-                <div class="caption-container">
+                <div class="caption-container-heyhey">
                     <p id="caption">David Thomas Jones (30 December 1945 – 29 February 2012) was an English singer-songwriter, musician, actor and businessman, best known as a member of the band the Monkees, and for starring in the TV series of the same name. His acting
                         credits include a Tony-nominated role as the Artful Dodger in the original London and Broadway productions of Oliver! as well as a guest star role in a hallmark episode of The Brady Bunch television show and later reprised parody
                         film; Love, American Style; and My Two Dads. Jones is considered one of the great teen idols.</p>
@@ -103,7 +103,7 @@
             <div class="mySlides fade">
                 <div class="numbertext">3 / 9</div>
                 <img src="assets/myimages/Carousel-images/Pic2.jpg" alt="The Monkees Pic 2" style="width:100%">
-                <div class="caption-container">
+                <div class="caption-container-heyhey">
                     <p id="caption">"Once you're in, you're in. It's like the Mafia. Once a Monkee, always a Monkee." (1967)</p>
                     <footer><cite><strong>Davy Jones</strong></cite></footer>
                 </div>
@@ -112,7 +112,7 @@
             <div class="mySlides fade">
                 <div class="numbertext">4 / 9</div>
                 <img src="assets/myimages/Carousel-images/mn.jpg" alt="Mike Nesmith" style="width:100%">
-                <div class="caption-container">
+                <div class="caption-container-heyhey">
                     <p id="caption">Robert Michael Nesmith (born December 30, 1942) is an American musician, songwriter, actor, producer, novelist, businessman, and philanthropist, best known as a member of the pop rock band the Monkees and co-star of the TV series The
                         Monkees (1966–1968). Nesmith's songwriting credits include "Different Drum" (sung by Linda Ronstadt with the Stone Poneys). </p>
                 </div>
@@ -121,7 +121,7 @@
             <div class="mySlides fade">
                 <div class="numbertext">5 / 9</div>
                 <img src="assets/myimages/Carousel-images/Pic3.jpg" alt="The Monkees Pic 3" style="width:100%">
-                <div class="caption-container">
+                <div class="caption-container-heyhey">
                     <p id="caption">"Hey, wait a minute, guys, you know what? It's seven thirty, six thirty central time. It's time for The Monkees. I wonder if anybody around here has got a television set?" (1968)</p>
                     <footer><cite><strong>Mike Nesmith</strong></cite></footer>
                 </div>
@@ -130,7 +130,7 @@
             <div class="mySlides fade">
                 <div class="numbertext">6 / 9</div>
                 <img src="assets/myimages/Carousel-images/md.jpg" alt="Micky Dolenz" style="width:100%">
-                <div class="caption-container">
+                <div class="caption-container-heyhey">
                     <p id="caption">George Michael Dolenz Jr. (born March 8, 1945) is an American actor, musician, television director, radio personality and theatre director, best known as a vocalist and drummer of the 1960s pop/rock band the Monkees.</p>
                 </div>
             </div>
@@ -138,7 +138,7 @@
             <div class="mySlides fade">
                 <div class="numbertext">7 / 9</div>
                 <img src="assets/myimages/Carousel-images/Pic4.jpg" alt="The Monkees Pic 4" style="width:100%">
-                <div class="caption-container">
+                <div class="caption-container-heyhey">
                     <p id="caption">"It was a television show about imaginary characters," Dolenz said, citing John Lennon's comparison of them to the Marx Brothers. "I was an actor-musician, like Miley Cyrus, and I was cast into this show playing a wacky drummer. That's
                         how I've looked at it. Whenever I go back on the road or do television, to some degree, I'm going back to playing that character." (2016)</p>
                     <footer><cite><strong>Micky Dolenz</strong></cite></footer>
@@ -148,7 +148,7 @@
             <div class="mySlides fade">
                 <div class="numbertext">8 / 9</div>
                 <img src="assets/myimages/Carousel-images/pt.jpg" alt="Peter Tork" style="width:100%">
-                <div class="caption-container">
+                <div class="caption-container-heyhey">
                     <p id="caption">Peter Halsten Thorkelson (born February 13, 1942), better known as Peter Tork, is an American musician and actor, best known as the keyboardist and bass guitarist of the Monkees.</p>
                 </div>
             </div>
@@ -156,7 +156,7 @@
             <div class="mySlides fade">
                 <div class="numbertext">9 / 9</div>
                 <img src="assets/myimages/Carousel-images/Pic5.jpg" alt="The Monkees Pic 5" style="width:100%">
-                <div class="caption-container">
+                <div class="caption-container-heyhey">
                     <p id="caption">"Vampires!!! What a time to be caught without a turtleneck!" (1967)</p>
                     <footer><cite><strong>Peter Tork</strong></cite></footer>
                 </div>
